@@ -108,6 +108,8 @@ Release 0.91.0 - Unreleased
                MiniZooKeeperCluster for test writing (Liyin Tang via Stack)
    HBASE-3696  isMajorCompaction() check triggers lots of listStatus DFS RPC
                calls from HBase (Liyin Tang via Stack)
+   HBASE-3717  deprecate HTable isTableEnabled() methods in favor of
+               HBaseAdmin methods (David Butler via Stack)
 
   TASK
    HBASE-3559  Move report of split to master OFF the heartbeat channel
